switching over to desktop after powercut

--- a/Final Try/dashboard.html
+++ b/Final Try/dashboard.html
@@ -269,7 +269,9 @@
                                         <td colspan="2">
                                             <input id="nic" type="text" name="nic" autocomplete="on" required placeholder="NIC">
                                         </td>
-                                        <td> </td>
+                                        <td>
+                                            <input type="text" id="Age" required placeholder="Age" max="99" min="10">
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td colspan="2">
@@ -280,16 +282,27 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
+                                        <!-- <td>
                                             <p>Current Address</p>
-                                        </td>
-                                        <td colspan="3"> <textarea name="txtAddress" id="" cols="1" rows="4" placeholder="Street Address"></textarea>
+                                        </td> -->
+                                        <td colspan="3"> <textarea name="txtAddress" id="" cols="1" rows="4" placeholder="Address"></textarea>
 
                                     </tr>
                                     <!--Next Row-->
                                     <tr>
-                                        <td colspan="2"> <input type="text" name="txtFullName" autocomplete="on" required placeholder="City"></td>
-                                        <td colspan="2"> <input type="text" name="txtFullName" autocomplete="on" required placeholder="State/Province"></td>
+                                        <td colspan="2">
+                                            <select name="" id="">
+                                                <option value="" disabled selected>
+                                                    Assign a Doctor 
+                                                </option>
+                                                <option value="">Randila</option>
+                                                <option value="">Saveen</option>
+                                                <option value="">Dinithi</option>
+                                                <option value="">Dilasha</option>
+                                                <option value="">Chathushi</option>
+                                            </select>
+                                        </td>
+                                        <td colspan="2"> </td>
                                     </tr>
                                     <tr>
                                         <td colspan="4">
